# Embedded-Firmware-Programming-I

./: CMakeLists.txt  NUCLEO_F411RE.ioc  README.md
Core/Src/: C_L004_Led_Toggle_Addr.c  C_L008_Led_Toggle_Addr_Struct.c  L000_Led_Toggle_Addr.cpp  L004_Led_Toggle_Addr.cpp  L008_Led_Toggle_Addr_Struct.cpp  main.cpp  system_stm32f4xx.c
